--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       <img id="image" src="https://static.wixstatic.com/media/ae69fd_c2a31af0930d499ca740269a78b45d0a.jpg/v1/fill/w_789,h_538,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/ae69fd_c2a31af0930d499ca740269a78b45d0a.jpg">
       <figcaption id="img-caption">Ralph Bakshi sitting in his studio</figcaption>
     </div>
-</main>
+
+  <div id="tribute-info">
+    <h2>THE EARLY YEARS</h2>
+    <pre>
+        Ralph Bakshi began October 1938 in Haifa, Palestine. In 1939 his family brought him and his sister to New York, escaping the threat of war. He 
+        grew up in Brooklyn, attending the High School of Industrial Arts, now called the High School of Art & Design. After graduating in 1956 with an
+        award in cartooning, Bakshi went to work at Terrytoons Animation Studio in New Rochelle as a cel polisher, soon graduating to cel painting.
+    </pre>
+  </div>
+
+  <h2>Learn more about ralph bakshi <a id="tribute-link" target="_blank" href="https://www.bakshistudio.com/about-filmography">here</a></h2>
+
+  </main>
 </body>
 </html>
