--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </pre>
   </div>
 
-  <h2>Learn more about ralph bakshi <a id="tribute-link" target="_blank" href="https://www.bakshistudio.com/about-filmography">here</a></h2>
+  <h2>Learn more about ralph bakshi <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Ralph_Bakshi">here</a></h2>
 
   </main>
 </body>
