--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <div id="tribute-info">
     <h2>THE EARLY YEARS</h2>
-    <pre>
+    <p id="info-para">
         Ralph Bakshi began October 1938 in Haifa, Palestine. In 1939 his family brought him and his sister to New York, escaping the threat of war. He 
         grew up in Brooklyn, attending the High School of Industrial Arts, now called the High School of Art & Design. After graduating in 1956 with an
         award in cartooning, Bakshi went to work at Terrytoons Animation Studio in New Rochelle as a cel polisher, soon graduating to cel painting.
-    </pre>
+    </p>
   </div>
 
   <h2>Learn more about ralph bakshi <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Ralph_Bakshi">here</a></h2>
