--- a/index.html
+++ b/index.html
@@ -16,11 +16,32 @@
     </div>
 
   <div id="tribute-info">
-    <h2>THE EARLY YEARS</h2>
+    <h2>The Timeline of Ralph Bakshi</h2>
     <p id="info-para">
-        Ralph Bakshi began October 1938 in Haifa, Palestine. In 1939 his family brought him and his sister to New York, escaping the threat of war. He 
-        grew up in Brooklyn, attending the High School of Industrial Arts, now called the High School of Art & Design. After graduating in 1956 with an
-        award in cartooning, Bakshi went to work at Terrytoons Animation Studio in New Rochelle as a cel polisher, soon graduating to cel painting.
+        1938: Born on October 29 in Haifa, Palestine (now Israel)
+1939: Family moves to Brownsville, Brooklyn, New York
+1956: Begins working at Terrytoons animation studio as a cel polisher
+1957: Promoted to animator at Terrytoons
+1965: Becomes creative director at Terrytoons
+1966: Moves to Paramount's animation division as creative director
+1967: Creates "Mighty Heroes" series for Terrytoons
+1972: Directs first feature film, "Fritz the Cat" - first animated film to receive an X rating
+1973: Releases "Heavy Traffic", exploring themes of urban life and racism
+1974: Directs "Coonskin", a controversial satire on race relations
+1975: Begins work on "Hey Good Lookin'", but production is delayed
+1977: Releases "Wizards", a post-apocalyptic fantasy film
+1978: Directs animated "The Lord of the Rings", covering the first half of Tolkien's trilogy
+1981: Releases "American Pop", chronicling four generations of a Russian Jewish immigrant family
+1982: "Hey Good Lookin'" finally released after significant reworking
+1983: Directs "Fire and Ice" in collaboration with famed fantasy artist Frank Frazetta
+1987-1988: Creates and produces "Mighty Mouse: The New Adventures" TV series, launching careers of several animators
+1989: Directs music video for "This Ain't the Summer of Love" by The Ramones
+1992: Directs live-action/animation hybrid film "Cool World" starring Brad Pitt
+1994: Develops but ultimately abandons "Coney Island of the Mind" project
+1997: Creates "Spicy City", the first prime-time animated series aimed at adults on HBO
+2003: Teaches animation at School of Visual Arts in New York
+2015: Releases crowdfunded short film "Last Days of Coney Island" on Vimeo
+2019: Announces development of "Wizards 2" but project remains unreleased.
     </p>
   </div>
 
