--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div id="tribute-info">
     <h2>The Timeline of Ralph Bakshi</h2>
-    <p id="info-para">
+    <pre id="info-para">
         1938: Born on October 29 in Haifa, Palestine (now Israel)
 1939: Family moves to Brownsville, Brooklyn, New York
 1956: Begins working at Terrytoons animation studio as a cel polisher
@@ -42,7 +42,7 @@
 2003: Teaches animation at School of Visual Arts in New York
 2015: Releases crowdfunded short film "Last Days of Coney Island" on Vimeo
 2019: Announces development of "Wizards 2" but project remains unreleased.
-    </p>
+    </pre>
   </div>
 
   <h2>Learn more about ralph bakshi <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Ralph_Bakshi">here</a></h2>
